# omr

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile
compiler/: CMakeLists.txt  dummy.cpp
compiler/codegen/: AheadOfTimeCompile.hpp  Analyser.cpp  Analyser.hpp  BackingStore.hpp  CMakeLists.txt  CodeGenGC.cpp  CodeGenPhase.hpp  CodeGenPhaseToPerform.hpp  CodeGenPrep.cpp  CodeGenRA.cpp  CodeGenerator.hpp  FrontEnd.cpp  FrontEnd.hpp  GCRegisterMap.hpp  GCStackAtlas.hpp  GCStackMap.hpp  InstOpCodeEnum.hpp  InstructionFlagEnum.hpp  InstructionKindEnum.hpp  LinkageConventionsEnum.hpp  LiveReference.hpp  LiveRegister.cpp  LiveRegister.hpp  Machine.hpp  MemoryReference.hpp  NodeEvaluation.cpp  OMRAheadOfTimeCompile.cpp  OMRAheadOfTimeCompile.hpp  OMRCodeGenPhase.cpp  OMRCodeGenPhase.hpp  OMRCodeGenPhaseEnum.hpp  OMRCodeGenPhaseFunctionTable.hpp  OMRCodeGenerator.cpp  OMRCodeGenerator.hpp  OMRGCRegisterMap.cpp  OMRGCRegisterMap.hpp  OMRGCStackAtlas.cpp  OMRGCStackAtlas.hpp  OMRInstOpCode.cpp  OMRInstOpCode.hpp  (+53 more)
compiler/compile/: AliasBuilder.hpp  CMakeLists.txt  Compilation.hpp  CompilationException.hpp  CompilationTypes.hpp  InlineBlock.hpp  Method.cpp  Method.hpp  OMRAliasBuilder.cpp  OMRAliasBuilder.hpp  OMRCompilation.cpp  OMRCompilation.hpp  OMRMethod.hpp  OMRSymbolReferenceTable.cpp  OMRSymbolReferenceTable.hpp  OSRData.cpp  OSRData.hpp  ResolvedMethod.hpp  SymbolReferenceTable.hpp  TLSCompilationManager.cpp  TLSCompilationManager.hpp  VirtualGuard.cpp  VirtualGuard.hpp
compiler/control/: CMakeLists.txt  CompilationController.cpp  CompilationController.hpp  CompilationStateManager.cpp  CompilationStateManager.hpp  CompileMethod.cpp  CompileMethod.hpp  OMROptions.cpp  OMROptions.hpp  OMROptions_inlines.hpp  OMRRecompilation.cpp  OMRRecompilation.hpp  OptimizationPlan.cpp  OptimizationPlan.hpp  Options.hpp  OptionsUtil.hpp  Recompilation.hpp
compiler/cs2/: allocator.h  arrayof.h  bitmanip.h  bitvectr.h  cs2.h  dgraph.h  hashtab.h  listof.h  llistof.h  sparsrbit.h  tableof.h  timer.h  windows_api.h
compiler/env/: ArithEnv.hpp  CMakeLists.txt  CPU.hpp  ClassEnv.hpp  CompilerEnv.hpp  DebugEnv.hpp  Environment.hpp  ExceptionTable.cpp  ExceptionTable.hpp  FEBase.cpp  FEBase.hpp  FEBase_t.hpp  FilePointer.hpp  FilePointerDecl.hpp  Globals.cpp  IO.hpp  JitConfig.cpp  JitConfig.hpp  KnownObjectTable.hpp  MemorySegment.hpp  OMRArithEnv.cpp  OMRArithEnv.hpp  OMRCPU.cpp  OMRCPU.hpp  OMRClassEnv.cpp  OMRClassEnv.hpp  OMRCompilerEnv.cpp  OMRCompilerEnv.hpp  OMRDebugEnv.cpp  OMRDebugEnv.hpp  OMREnvironment.hpp  OMRIO.cpp  OMRIO.hpp  OMRKnownObjectTable.cpp  OMRKnownObjectTable.hpp  OMRObjectModel.cpp  OMRObjectModel.hpp  OMRPersistentInfo.cpp  OMRPersistentInfo.hpp  OMRVMAccessCriticalSection.hpp  (+31 more)
compiler/il/: AliasSetInterface.hpp  Aliases.cpp  Block.hpp  CMakeLists.txt  DataTypes.hpp  DataTypesEnum.hpp  IL.hpp  ILHelpers.hpp  ILOpCodeProperties.hpp  ILOpCodes.hpp  ILOpCodesEnum.hpp  ILOps.hpp  ILProps.hpp  Node.hpp  NodeExtension.hpp  NodePool.cpp  NodePool.hpp  NodeUnions.hpp  NodeUtils.cpp  NodeUtils.hpp  OMRBlock.cpp  OMRBlock.hpp  OMRBlock_inlines.hpp  OMRDataTypes.cpp  OMRDataTypes.hpp  OMRIL.cpp  OMRIL.hpp  OMRILOpCodesEnum.hpp  OMRILOps.cpp  OMRILOps.hpp  OMRNode.cpp  OMRNode.hpp  OMRNode_inlines.hpp  OMRSymbolReference.cpp  OMRSymbolReference.hpp  OMRTreeTop.cpp  OMRTreeTop.hpp  OMRTreeTop_inlines.hpp  Symbol.hpp  SymbolReference.hpp  (+1 more)
compiler/ilgen/: ByteCodeIterator.hpp  ByteCodeIteratorWithState.hpp  BytecodeBuilder.cpp  BytecodeBuilder.hpp  CMakeLists.txt  IlBuilder.cpp  IlBuilder.hpp  IlGen.hpp  IlGenRequest.cpp  IlGenRequest.hpp  IlInjector.cpp  IlInjector.hpp  MethodBuilder.cpp  MethodBuilder.hpp  OMRIlGenRequest.hpp  OMRIlGeneratorMethodDetails.hpp  OMRIlGeneratorMethodDetails_inlines.hpp  TypeDictionary.cpp  TypeDictionary.hpp
compiler/infra/: AVLTree.hpp  Annotations.hpp  Array.hpp  Assert.cpp  Assert.hpp  Bit.hpp  BitVector.cpp  BitVector.hpp  CMakeLists.txt  Cfg.hpp  CfgFrequencyCompletion.cpp  CfgFrequencyCompletion.hpp  Checklist.cpp  Checklist.hpp  CriticalSection.hpp  Flags.hpp  HashTab.cpp  HashTab.hpp  HedgeTree.hpp  IGBase.cpp  IGBase.hpp  IGNode.cpp  IGNode.hpp  ILWalk.cpp  ILWalk.hpp  InterferenceGraph.cpp  InterferenceGraph.hpp  Link.hpp  List.hpp  Monitor.hpp  MonitorTable.hpp  OMRCfg.cpp  OMRCfg.hpp  OMRMonitor.cpp  OMRMonitor.hpp  OMRMonitorTable.cpp  OMRMonitorTable.hpp  Random.cpp  Random.hpp  ReferenceWrapper.hpp  (+13 more)
compiler/optimizer/: AsyncCheckInsertion.cpp  AsyncCheckInsertion.hpp  BackwardBitVectorAnalysis.cpp  BackwardIntersectionBitVectorAnalysis.cpp  BackwardUnionBitVectorAnalysis.cpp  BitVectorAnalysis.cpp  CFGSimplifier.cpp  CFGSimplifier.hpp  CMakeLists.txt  CallInfo.hpp  CatchBlockRemover.cpp  CatchBlockRemover.hpp  CompactLocals.cpp  CompactLocals.hpp  CopyPropagation.cpp  CopyPropagation.hpp  DataFlowAnalysis.cpp  DataFlowAnalysis.hpp  DeadStoreElimination.cpp  DeadStoreElimination.hpp  DeadTreesElimination.cpp  DeadTreesElimination.hpp  DebuggingCounters.cpp  DebuggingCounters.hpp  Delayedness.cpp  DominatorVerifier.cpp  DominatorVerifier.hpp  Dominators.cpp  Dominators.hpp  DominatorsChk.cpp  DominatorsChk.hpp  Earliestness.cpp  ExpressionsSimplification.cpp  ExpressionsSimplification.hpp  FEInliner.cpp  FieldPrivatizer.cpp  FieldPrivatizer.hpp  GeneralLoopUnroller.cpp  GeneralLoopUnroller.hpp  GlobalAnticipatability.cpp  (+124 more)
compiler/ras/: CFGChecker.cpp  CFGChecker.hpp  CMakeLists.txt  CallStack.cpp  CallStack.hpp  CallStackIterator.hpp  Debug.cpp  Debug.hpp  DebugCounter.cpp  DebugCounter.hpp  Delimiter.hpp  IgnoreLocale.cpp  IgnoreLocale.hpp  LimitFile.cpp  LogTracer.cpp  LogTracer.hpp  OptionsDebug.cpp  PPCOpNames.cpp  Tree.cpp
compiler/runtime/: Alignment.cpp  CMakeLists.txt  CodeCache.hpp  CodeCacheConfig.hpp  CodeCacheExceptions.hpp  CodeCacheManager.hpp  CodeCacheMemorySegment.hpp  CodeCacheTypes.cpp  CodeCacheTypes.hpp  CodeMetaDataManager.hpp  CodeMetaDataPOD.hpp  Helpers.inc  MethodExceptionData.hpp  OMRCodeCache.cpp  OMRCodeCache.hpp  OMRCodeCacheConfig.cpp  Runtime.cpp  (+11 more)
jitbuilder/: CMakeLists.txt
(+1707 files in other folders)
