    
add_library(tr_infra INTERFACE)
target_sources(tr_infra INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}/Assert.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/BitVector.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/Checklist.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/HashTab.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/IGBase.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/IGNode.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/ILWalk.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/InterferenceGraph.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/OMRMonitor.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/OMRMonitorTable.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/Random.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/SimpleRegex.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Timer.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/TreeServices.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/OMRCfg.cpp 
)
