    #$(JIT_OMR_DIRTY_DIR)/optimizer/AsyncCheckInsertion.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/BackwardBitVectorAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/BackwardIntersectionBitVectorAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/BackwardUnionBitVectorAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/BitVectorAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/CatchBlockRemover.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/CFGSimplifier.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/CompactLocals.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/CopyPropagation.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/DataFlowAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/DeadStoreElimination.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/DeadTreesElimination.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/DebuggingCounters.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Delayedness.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Dominators.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/DominatorVerifier.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/DominatorsChk.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Earliestness.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ExpressionsSimplification.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/FieldPrivatizer.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/GeneralLoopUnroller.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/GlobalAnticipatability.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/GlobalRegisterAllocator.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Inliner.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/RematTools.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/InductionVariable.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/IntersectionBitVectorAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Isolatedness.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/IsolatedStoreElimination.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Latestness.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LiveOnAllPaths.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LiveVariableInformation.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Liveness.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LoadExtensions.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalAnticipatability.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalLiveRangeReducer.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalReordering.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalTransparency.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LoopCanonicalizer.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LoopReducer.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LoopReplicator.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LoopVersioner.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMRLocalCSE.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalDeadStoreElimination.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/LocalOpts.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMROptimization.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMROptimizationManager.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMRTransformUtil.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMROptimizer.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OrderBlocks.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OSRDefAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/PartialRedundancy.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/PreExistence.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/PrefetchInsertion.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ReachingBlocks.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Reachability.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ReachingDefinitions.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/RedundantAsyncCheckRemoval.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/RegisterAnticipatability.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/RegisterAvailability.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/RegisterCandidate.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ShrinkWrapping.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMRSimplifier.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMRSimplifierHelpers.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/OMRSimplifierHandlers.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/StructuralAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/Structure.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/TranslateTable.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/UnionBitVectorAnalysis.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/UseDefInfo.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ValueNumberInfo.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/VirtualGuardCoalescer.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/VirtualGuardHeadMerger.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/RegDepCopyRemoval.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ReorderIndexExpr.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/SinkStores.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/StripMiner.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/VPConstraint.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/VPHandlers.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/VPHandlersCommon.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ValuePropagation.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/ValuePropagationCommon.cpp \
    #$(JIT_OMR_DIRTY_DIR)/optimizer/FEInliner.cpp \

add_library(tr_optimizer STATIC
	AsyncCheckInsertion.cpp
	BackwardBitVectorAnalysis.cpp
	BackwardIntersectionBitVectorAnalysis.cpp
	BackwardUnionBitVectorAnalysis.cpp
	BitVectorAnalysis.cpp
	CatchBlockRemover.cpp
	CFGSimplifier.cpp
	CompactLocals.cpp
	CopyPropagation.cpp
	DataFlowAnalysis.cpp
	DeadStoreElimination.cpp
	DeadTreesElimination.cpp
	DebuggingCounters.cpp
	Delayedness.cpp
	Dominators.cpp
	DominatorVerifier.cpp
	DominatorsChk.cpp
	Earliestness.cpp
	ExpressionsSimplification.cpp
	FieldPrivatizer.cpp
	GeneralLoopUnroller.cpp
	GlobalAnticipatability.cpp
	GlobalRegisterAllocator.cpp
	Inliner.cpp
	RematTools.cpp
	InductionVariable.cpp
	IntersectionBitVectorAnalysis.cpp
	Isolatedness.cpp
	IsolatedStoreElimination.cpp
	Latestness.cpp
	LiveOnAllPaths.cpp
	LiveVariableInformation.cpp
	Liveness.cpp
	LoadExtensions.cpp
	LocalAnalysis.cpp
	LocalAnticipatability.cpp
	LocalLiveRangeReducer.cpp
	LocalReordering.cpp
	LocalTransparency.cpp
	LoopCanonicalizer.cpp
	LoopReducer.cpp
	LoopReplicator.cpp
	LoopVersioner.cpp
	OMRLocalCSE.cpp
	LocalDeadStoreElimination.cpp
	LocalOpts.cpp
	OMROptimization.cpp
	OMROptimizationManager.cpp
	OMRTransformUtil.cpp
	OMROptimizer.cpp
	OrderBlocks.cpp
	OSRDefAnalysis.cpp
	PartialRedundancy.cpp
	PreExistence.cpp
	PrefetchInsertion.cpp
	ReachingBlocks.cpp
	Reachability.cpp
	ReachingDefinitions.cpp
	RedundantAsyncCheckRemoval.cpp
	RegisterAnticipatability.cpp
	RegisterAvailability.cpp
	RegisterCandidate.cpp
	ShrinkWrapping.cpp
	OMRSimplifier.cpp
	OMRSimplifierHelpers.cpp
	OMRSimplifierHandlers.cpp
	StructuralAnalysis.cpp
	Structure.cpp
	TranslateTable.cpp
	UnionBitVectorAnalysis.cpp
	UseDefInfo.cpp
	ValueNumberInfo.cpp
	VirtualGuardCoalescer.cpp
	VirtualGuardHeadMerger.cpp
	RegDepCopyRemoval.cpp
	ReorderIndexExpr.cpp
	SinkStores.cpp
	StripMiner.cpp
	VPConstraint.cpp
	VPHandlers.cpp
	VPHandlersCommon.cpp
	ValuePropagation.cpp
	ValuePropagationCommon.cpp
	FEInliner.cpp
)
